--- a/homeassistant/components/lyngdorf/manifest.json
+++ b/homeassistant/components/lyngdorf/manifest.json
@@ -6,8 +6,8 @@
   "dependencies": ["ssdp"],
   "documentation": "https://www.home-assistant.io/integrations/lyngdorf",
   "iot_class": "local_push",
-  "loggers": ["lyngdorf", "async_upnp_client"],
   "requirements": ["lyngdorf==0.3.7"],
+  "loggers": ["lyngdorf"],
   "ssdp": [
     {
       "deviceType": "urn:schemas-upnp-org:device:MediaRenderer:2",
